--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -2,7 +2,8 @@
   <app-header
     [pageTitle]="pageTitle"
     [cartBadgeCount]="cartBadgeCount"
-    [isLoggedIn]="isLoggedIn">
+    [isLoggedIn]="isLoggedIn"
+    [showSearchBar]="isShowSearchBar">
   </app-header>
 </ion-header>
 <ion-content [fullscreen]="true" >
