--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -1,25 +1,43 @@
-ion-title{
+.header-div{
+    display: flex;
+    justify-content: space-between;
+    padding: 25px 15px 15px 15px;
+    width: 100%;
+}
+.header-block{
+    width: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+ion-searchbar{
+    padding-top: unset;
+    padding-bottom: unset;
+    padding-right: unset;
+    //transform: scale(1.5);
+}
+
+.page-title{
+    margin: unset;
+    margin-left: 10px;
+    font-size: 22px;
     letter-spacing: 0.1em; 
-    font-size: larger;
 }
-.toolbar{
-    height: 90px; 
-    align-items: center; 
-    justify-content: center; 
-    display: flex;
+.btn-menu{
+    --background: transparent;
+    --background-activated-opacity: 0.5;
+    --border-width: 0;
+    --box-shadow: unset;
+    --padding-start: 0px;
+    --padding-end: 0px;
+    --padding-top: 0px;
+    --padding-bottom: 0px;
 }
-#cart-btn {
-    position: relative;
-    height: 80px;
-    align-items: center; 
-    justify-content: center; 
-    display: flex;
-    padding-right: 10px;
- }
  
  #cart-badge {
     position: absolute;
-    top: 15px;
+    top: 30px;
     right: -5px;
     margin-right: 10px;
  }
