--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,12 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.searchbar-input.sc-ion-searchbar-ios{ 
+    height: 50px;
+    margin-top: -5px;
+}
+.searchbar-search-icon.sc-ion-searchbar-ios {
+    margin-right: 5px;
+}
+
